fixed vertical space occupied by cv skill list on mobile and changed horizontal sponk of cv parts,

--- a/bratfolio/main.css
+++ b/bratfolio/main.css
@@ -598,11 +598,12 @@ nav {
     border: 1px solid rgba(100, 100, 100, 0.2);
     border-bottom: 3px solid rgba(0, 0, 0, 0.2);
     margin: 5px;
+    cursor: pointer;
 }
 
 .cv-part:hover {
     border-bottom-color: #1FC150;
-    cursor: pointer;
+    background-color: rgba(230, 230, 230, 0.5);
 }
 
 .cv-part img {
@@ -1204,11 +1205,30 @@ nav {
     .core-skill-text {
         min-height: 100px;
     }
+    
+    .project-preview li {
+        width: 150px;
+        height: 150px;
+    }
+    
+    .four-list {
+        width: 90%;
+        margin-bottom: 25px;
+    }
+    
+    .four-list div, .four-list p {
+        display: inline;
+    }
+    
+    .four-list div:not(:last-child):after {
+        content: ' | ';
+        opacity: .3;
+    }
 }
 
 @media(max-width: 400px) {
     .cv-list > li {
-        width: 100%;
+        width: 95%;
         min-width: auto;
         text-align: center;
     }
